[package]
name = "racf"
version = "1.3.1"
edition = "2021"
license = "GPL-3.0"
authors = [ "explosion-mental" ]
keywords = [ "cli", "kernel-governor", "turbo-boost", "usage", "battery-saving" ]
categories = [ "command-line-utilities" ]
description = "Tool that dynamicaly switches turbo boost and kernel governor based on usage and charger state"
repository = "https://codeberg.org/explosion-mental/racf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.14"
# starship has forked the battery crate and updated it's dependencies (old nix crate had a vulnerability)
battery = { version = "0.7.*", package = "starship-battery" }
getsys = "1"
clap = { version = "4.1", features = ["derive"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
owo-colors = "3"
psutil = { version = "3", default-features = false, features = [ "process" ] }

[[bin]]
name = "racf"
path = "racf.rs"
