[package]
name = "racf"
version = "1.6.4"
edition = "2021"
license = "GPL-3.0"
authors = [ "explosion-mental" ]
keywords = [ "cli", "kernel-governor", "turbo-boost", "usage", "battery-saving" ]
categories = [ "command-line-utilities" ]
description = "Tool that dynamicaly switches turbo boost and kernel governor based on usage and charger state"
repository = "https://codeberg.org/explosion-mental/racf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getsys     = "1" # my own little lib to handle PerCpu stuff
num_cpus   = "1.14"
owo-colors = "3"
toml       = "0.7"
thiserror  = "1"
# starship has forked the battery crate and updated it's dependencies (old nix crate had a vulnerability)
battery = { version = "0.7", package = "starship-battery" }
clap    = { version = "4.1", features = ["derive"] }
serde   = { version = "1.0", features = ["derive"] }
psutil  = { version = "3", default-features = false, features = [ "process" ] }

[[bin]]
name = "racf"
path = "racf.rs"
