[package]
name = "racf"
version = "1.6.6"
edition = "2021"
license = "GPL-3.0"
authors = [ "explosion-mental" ]
keywords = [ "cli", "kernel-governor", "turbo-boost", "usage", "battery-saving" ]
categories = [ "command-line-utilities" ]
description = "Tool that dynamicaly switches turbo boost and kernel governor based on usage and charger state"
repository = "https://codeberg.org/explosion-mental/racf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getsys     = "1" # my own little lib to handle PerCpu stuff
num_cpus   = "1.16"
owo-colors = "3.5"
toml       = "0.8"
thiserror  = "1.0"
# starship has forked the battery crate and updated it's dependencies (old nix crate had a vulnerability)
battery = { version = "0.8", package = "starship-battery" }
clap    = { version = "4.2", features = ["derive"] }
serde   = { version = "1.0", features = ["derive"] }
psutil  = { version = "3.2", default-features = false, features = [ "process" ] }

[[bin]]
name = "racf"
path = "racf.rs"
